--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <title>604 Net Disk System</title>
-  <meta http-equiv="refresh" content="0;url=/NetDisk/login.do">
+  <meta http-equiv="refresh" content="0;url=/NetDisk/toMain.do">
 </head>
 <body>
 </body>
